# base_control

./: README.md
arti_base_control/: CMakeLists.txt  package.xml
arti_base_control/cfg/: Axle.cfg  BaseControl.cfg  FourBarLinkageSteering.cfg  IdealAckermannSteering.cfg  Vehicle.cfg
arti_base_control/include/arti_base_control/: abstract_motor.h  axle.h  base_control.h  drive_motor.h  joint_actuator_factory.h  joint_limits.h  joint_sensor.h  joint_state.h  motor_factory.h  position_controlled_joint_actuator.h  steering.h  steering_motor.h  types.h  utils.h  vehicle.h  velocity_controlled_joint_actuator.h  wheel.h
arti_base_control/msg/: OdometryAxelCalculationInfo.msg  OdometryCalculationInfo.msg
arti_base_control/src/: abstract_motor.cpp  axle.cpp  base_control.cpp  base_control_node.cpp  drive_motor.cpp  joint_actuator_factory.cpp  joint_limits.cpp  joint_sensor.cpp  joint_state.cpp  motor_factory.cpp  position_controlled_joint_actuator.cpp  steering.cpp  steering_motor.cpp  utils.cpp  vehicle.cpp  velocity_controlled_joint_actuator.cpp  wheel.cpp
arti_base_control/test/: test_wheel.cpp  test_wheel.test
arti_base_control_examples/: CMakeLists.txt  package.xml
arti_base_control_examples/config/: ackermann_base.yaml  differential_base.yaml
arti_base_control_examples/launch/: ackermann_base.launch  differential_base.launch
arti_base_control_examples/urdf/: ackermann_base.urdf.xacro  differential_base.urdf.xacro  wheel.urdf.xacro
arti_base_control_msgs/: CMakeLists.txt  package.xml
arti_base_control_msgs/msg/: OdometryCalculationInfo.msg
arti_base_control_tests/: CMakeLists.txt  package.xml
arti_base_control_tests/include/arti_base_control_tests/: rotation_drive_test.h  staight_driving_test.h
arti_base_control_tests/src/: rotation_drive_test.cpp  staight_driving_test.cpp
arti_base_control_vesc/: CMakeLists.txt  package.xml
arti_base_control_vesc/include/arti_base_control_vesc/: vesc_drive_motor.h  vesc_joint_actuator_factory.h  vesc_motor.h  vesc_position_controlled_joint_actuator.h  vesc_steering_motor.h  vesc_velocity_controlled_joint_actuator.h
arti_base_control_vesc/src/: vesc_drive_motor.cpp  vesc_joint_actuator_factory.cpp  vesc_motor.cpp  vesc_position_controlled_joint_actuator.cpp  vesc_steering_motor.cpp  vesc_velocity_controlled_joint_actuator.cpp
