<?xml version="1.0"?>
<package format="2">
  <name>arti_base_control</name>
  <version>0.0.1</version>
  <description>The arti_base_control package contains a library and node for controlling a robot base.</description>

  <maintainer email="a.buchegger@arti-robots.com">Alexander Buchegger</maintainer>
  <author email="a.buchegger@arti-robots.com">Alexander Buchegger</author>
  <author email="c.muehlbacher@arti-robots.com">Clemens Mühlbacher</author>

  <license>BSD</license>

  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- <url type="website">http://wiki.ros.org/vesc_differential_drive</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ackermann_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>vesc_motor</build_depend>

  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>vesc_motor</build_export_depend>

  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>vesc_motor</exec_depend>

  <export>
  </export>
</package>
